# camServer

./: README.md  requirements.txt  setup.cfg
src/camserver/: camserver.py
src/camserver/templates/: index.html
tests/: test_camserver.py
