[metadata]
name = camserver
version = 0.0.1
description = A hopefully pip installable standalone camera server written in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bearddyy/camserver
author = Daniel Byrne
author_email = byrne_daniel@hotmail.co.uk
license = Apache 2.0
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.6
install_requires =
    typing-extensions; python_version < "3.8"
py_modules =
    camserver
package_dir =
    =src

[options.packages.find]
where = src
